--- a/index.html
+++ b/index.html
@@ -7,23 +7,34 @@
 
     <title>Hello CSUN!</title>
 
-    
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="style.css" />
-    
-
 
     <!-- import the webpage's javascript file -->
     <script src="script.js" defer></script>
   </head>
   <body>
     <!-- this is the start of content -->
-    <h1>
-      Hello 👋 Comp Sci !!!!
-    </h1>
-    <p>
-      This starter project gives you everything you need to start working on a new
-      website, and nothing more.
+    <h1>Hello 👋 Comp Sci !!!!</h1>
+
+    <!-- new elements -->
+    <h2>About Me</h2>
+    <p id="intro">
+      This is the first time messing with HTML and CSS. This paragraph has an <strong>id attribute</strong>.
     </p>
+
+
+
+<p>
+  <a href="https://www.csun.edu/" target="_blank">Visit CSUN Website</a>
+</p>
+
+    <ul>
+      <li>✅ Learn HTML</li>
+      <li>✅ Learn CSS</li>
+      <li>✅ Learn JavaScript</li>
+    </ul>
+
+    <button onclick="alert('Hello from Comp 584!')">Click Me</button>
   </body>
 </html>
